--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,10 @@
 @import 'blocks/index/offer'
 @import 'blocks/index/need'
 @import 'blocks/index/do'
+@import 'blocks/index/layout'
+@import 'blocks/index/payment'
 
+    
+@import 'blocks/index/merchant'
 @import 'footer'
 @import 'media'
