--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ template {
 }
 
 .container {
-  max-width: 1500px;
+  max-width: 1530px;
   margin: auto;
   padding: 0 10px;
 }
@@ -485,7 +485,7 @@ a {
 }
 
 .header-side {
-  max-width: 925px;
+  max-width: 1020px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -513,7 +513,7 @@ a {
           justify-content: flex-end;
   padding-right: 24px;
   position: relative;
-  margin-left: 59px;
+  margin-left: auto;
 }
 
 .header-side__phone::after {
@@ -524,16 +524,21 @@ a {
 }
 
 .nav-list {
-  margin: 15px 0 0;
+  margin: 20px 0 0;
   padding: 0;
   list-style: none;
 }
 
 .nav-list__item {
-  margin-right: 15px;
+  margin-right: 40px;
+}
+
+.nav-list__item:last-child {
+  margin-right: 0;
 }
 
 .nav-list__link {
+  letter-spacing: -0.11px;
   color: #ffffff;
   font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
@@ -548,6 +553,15 @@ a {
 .nav-list__link:hover {
   color: #44ff9b;
   border-bottom: 2px solid #44ff9b;
+}
+
+.logo {
+  margin-top: -15px;
+  margin-left: -8px;
+}
+
+.offer {
+  padding: 30px 0 0;
 }
 
 .offer .container {
@@ -566,7 +580,7 @@ a {
   font-size: 54px;
   font-weight: 400;
   line-height: 70px;
-  margin: 10px 0 50px;
+  margin: -8px 0 34px -10px;
 }
 
 .offer-block__title span {
@@ -584,7 +598,9 @@ a {
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 23px;
+  padding-left: 40px;
+  position: relative;
 }
 
 .offer-block__item::before {
@@ -592,6 +608,9 @@ a {
   margin-right: 25px;
   display: inline-block;
   vertical-align: middle;
+  position: absolute;
+  top: 0;
+  left: -9px;
 }
 
 .offer-block__item:last-child {
@@ -599,7 +618,8 @@ a {
 }
 
 .offer-block__link {
-  margin-top: 56px;
+  margin-top: 58px;
+  margin-left: -7px;
   max-width: 311px;
   width: 100%;
   height: 64px;
@@ -625,6 +645,138 @@ a {
   width: 100%;
   padding: 33px 30px 55px;
   background-color: #ffffff;
+}
+
+.offer-form__title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #202020;
+  text-align: center;
+  margin: -4px 0 20px;
+  line-height: 32px;
+}
+
+.offer-form__subtitle {
+  margin: -3px 0 37px;
+  text-align: center;
+  color: #202020;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.form-inputs {
+  position: relative;
+}
+
+.form-inputs span {
+  position: absolute;
+  right: 13px;
+  top: 19px;
+  color: red;
+}
+
+.form__input {
+  background-color: #f2f2f2;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 3px;
+  padding: 0 15px;
+  height: 54px;
+  border-bottom: 1px solid #d4d4d4;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 14px;
+  letter-spacing: 1.5px;
+}
+
+.form__block {
+  margin-top: 20px;
+  margin-bottom: 51px;
+}
+
+.form-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form-block__phone {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #202020;
+  font-size: 28px;
+  margin-right: auto;
+}
+
+.form-block span {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+}
+
+.form-block__button {
+  margin-left: auto;
+  background-color: #3a6726;
+  color: #ffffff;
+  font-weight: 700;
+  font-family: 'Open Sans', sans-serif;
+  border: none;
+  max-width: 174px;
+  height: 63px;
+  width: 100%;
+  border-radius: 4px;
+}
+
+.form-block__label {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  margin-top: -47px;
+}
+
+.form-block__label input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.form-block__indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 46px;
+  height: 46px;
+  border: 4px solid #a42f4a;
+  border-radius: 50%;
+  margin-left: -18px;
+}
+
+.form-block__indicator::after {
+  display: none;
+  content: url(../img/checkmark.png);
+  position: absolute;
+  top: -10px;
+  left: 6px;
+}
+
+.form-block__label input:checked ~ .form-block__indicator::after {
+  display: block;
+}
+
+.form-block__text {
+  color: #848484;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  max-width: 310px;
+  margin: 0;
+  padding-left: 70px;
+  margin-left: 60px;
 }
 
 .need {
@@ -695,7 +847,7 @@ a {
   max-width: 660px;
   position: absolute;
   top: 110px;
-  right: 150px;
+  right: 180px;
 }
 
 .need-block__title {
@@ -703,7 +855,7 @@ a {
   font-family: 'Comfortaa', sans-serif;
   font-size: 40px;
   font-weight: bold;
-  margin: 0 0 45px;
+  margin: 0 0 45px -10px;
 }
 
 .need-block__text {
@@ -712,7 +864,7 @@ a {
   font-size: 20px;
   font-weight: bold;
   line-height: 35px;
-  margin: 0 0 65px;
+  margin: -18px 0 55px -10px;
 }
 
 .need-block__subtitle {
@@ -720,7 +872,7 @@ a {
   font-family: 'Comfortaa', sans-serif;
   font-size: 30px;
   font-weight: bold;
-  margin: 0 0 45px;
+  margin: 0 0 33px -10px;
 }
 
 .need-block__list {
@@ -745,6 +897,7 @@ a {
 }
 
 .need-block__link {
+  margin: 60px 0 0 -4px;
   max-width: 311px;
   width: 100%;
   height: 64px;
@@ -798,5 +951,198 @@ a {
 .do-block__image {
   position: relative;
   margin-top: -109px;
+}
+
+.do-btn {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.do-btn__link {
+  max-width: 311px;
+  width: 100%;
+  height: 64px;
+  border-radius: 4px;
+  background-color: #10964e;
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 600;
+}
+
+.do-btn__phone {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+  color: #ffffff;
+  margin-left: 39px;
+}
+
+.do-btn__phone span {
+  font-weight: 300;
+}
+
+.layout {
+  position: relative;
+  padding: 70px 0 188px;
+}
+
+.layout::before {
+  content: '';
+  background: url(../img/dotted.png) left top no-repeat;
+  max-width: 551px;
+  width: 100%;
+  min-height: 663px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.layout-block {
+  position: relative;
+  background-color: #f8f8f8;
+  padding: 35px 35px 45px;
+  max-width: 475px;
+  width: 100%;
+}
+
+.layout-blocks {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.layout-block__image {
+  margin-bottom: 35px;
+}
+
+.layout-block__image img {
+  display: block;
+  margin: auto;
+}
+
+.layout-block__title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  margin: 0 0 18px;
+  font-size: 24px;
+}
+
+.layout-block__text {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0 0 25px;
+  line-height: 27px;
+  height: 81px;
+  overflow: hidden;
+}
+
+.layout-block__link {
+  font-family: 'Montserrat', sans-serif;
+  display: block;
+  text-transform: uppercase;
+  color: #396725;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.payment {
+  padding: 50px 0 125px;
+  background-color: #f8f8f8;
+}
+
+.merchant {
+  padding: 107px 0 170px;
+}
+
+.merchant__title {
+  color: #00873f;
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 40px;
+  position: relative;
+  margin: 0 0 46px;
+}
+
+.merchant__title::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 117px;
+  height: 7px;
+  background: url(../img/lines.png) center no-repeat;
+}
+
+.merchant__subtitle {
+  color: #878787;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 26px;
+  font-weight: bold;
+  line-height: 40px;
+  margin: 0 auto 66px;
+  text-align: center;
+  max-width: 1220px;
+}
+
+.merchant-block {
+  max-width: 460px;
+}
+
+.merchant-block__image {
+  margin-bottom: 47px;
+}
+
+.merchant-block__image img {
+  display: block;
+  margin: auto;
+}
+
+.merchant-block__title {
+  color: #202020;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 35px;
+  margin: 0 0 35px;
+}
+
+.merchant-block__text {
+  color: #848484;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 35px;
+  margin: 0 0 37px;
+}
+
+.merchant-block__link {
+  display: block;
+  color: #00873f;
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 70px;
+  text-decoration: underline;
+}
+
+.merchant-blocks {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
