--- a/sass/blocks/index/_do.sass
+++ b/sass/blocks/index/_do.sass
@@ -22,4 +22,27 @@
         &__image
             position: relative
             margin-top: -109px
+    &-btn
+        justify-content: center
+        &__link
+            max-width: 311px
+            width: 100%
+            height: 64px
+            border-radius: 4px
+            background-color: #10964e
+            color: #ffffff
+            font-family: 'Montserrat', sans-serif
+            font-size: 24px
+            display: flex
+            align-items: center
+            justify-content: center
+            font-weight: 600
+        &__phone
+            font-family: 'Montserrat', sans-serif
+            font-size: 26px
+            font-weight: 600
+            color: #ffffff
+            margin-left: 39px
+            span
+                font-weight: 300
             
