--- a/sass/blocks/index/_need.sass
+++ b/sass/blocks/index/_need.sass
@@ -46,26 +46,26 @@
         max-width: 660px
         position: absolute
         top: 110px
-        right: 150px
+        right: 180px
         &__title
             color: #fcb800
             font-family: 'Comfortaa', sans-serif
             font-size: 40px
             font-weight: bold
-            margin: 0 0 45px
+            margin: 0 0 45px -10px
         &__text
             color: $white
             font-family: 'Open Sans', sans-serif
             font-size: 20px
             font-weight: bold
             line-height: 35px
-            margin: 0 0 65px
+            margin: -18px 0 55px -10px
         &__subtitle
             color: #fcb800
             font-family: 'Comfortaa', sans-serif
             font-size: 30px
             font-weight: bold
-            margin: 0 0 45px
+            margin: 0 0 33px -10px
         &__list
             margin: 0
             padding: 0
@@ -82,6 +82,7 @@
                 vertical-align: middle
                 margin-right: 18px
         &__link
+            margin: 60px 0 0 -4px
             max-width: 311px
             width: 100%
             height: 64px
