--- a/sass/blocks/index/_offer.sass
+++ b/sass/blocks/index/_offer.sass
@@ -1,4 +1,5 @@
 .offer
+    padding: 30px 0 0
     .container
         justify-content: space-between
     &-block
@@ -9,7 +10,7 @@
             font-size: 54px
             font-weight: 400
             line-height: 70px
-            margin: 10px 0 50px
+            margin: -8px 0 34px -10px
             span
                 color: $green
         &__list
@@ -21,16 +22,22 @@
             font-family: 'Open Sans', sans-serif
             font-size: 24px
             font-weight: 400
-            margin-bottom: 20px
+            margin-bottom: 23px
+            padding-left: 40px
+            position: relative
             &::before
                 content: url(../img/check.png)
                 margin-right: 25px
                 display: inline-block
                 vertical-align: middle
+                position: absolute
+                top: 0
+                left: -9px
             &:last-child
                 margin-bottom: 0  
         &__link
-            margin-top: 56px
+            margin-top: 58px
+            margin-left: -7px
             max-width: 311px
             width: 100%
             height: 64px
@@ -48,3 +55,99 @@
         width: 100%
         padding: 33px 30px 55px
         background-color: $white
+        &__title
+            font-family: 'Montserrat', sans-serif
+            font-weight: 700
+            text-transform: uppercase
+            color: #202020
+            text-align: center
+            margin: -4px 0 20px
+            line-height: 32px
+        &__subtitle
+            margin: -3px 0 37px
+            text-align: center
+            color: #202020
+            font-family: 'Montserrat', sans-serif
+.form
+    &-inputs
+        position: relative
+        span
+            position: absolute
+            right: 13px
+            top: 19px
+            color: red
+    &__input
+        background-color: #f2f2f2
+        border-top: none
+        border-left: none
+        border-right: none
+        border-radius: 3px
+        padding: 0 15px
+        height: 54px
+        border-bottom: 1px solid #d4d4d4
+        font-family: 'Open Sans', sans-serif
+        margin-bottom: 14px
+        letter-spacing: 1.5px
+    &__block
+        margin-top: 20px
+        margin-bottom: 51px
+    &-block
+        display: flex
+        align-items: center
+        justify-content: center
+        &__phone
+            font-family: 'Open Sans', sans-serif
+            font-weight: 700
+            color: #202020
+            font-size: 28px
+            margin-right: auto
+        span
+            font-family: 'Montserrat', sans-serif
+            font-weight: 300
+            font-size: 24px
+        &__button
+            margin-left: auto
+            background-color: #3a6726
+            color: $white
+            font-weight: 700
+            font-family: 'Open Sans', sans-serif
+            border: none
+            max-width: 174px
+            height: 63px
+            width: 100%
+            border-radius: 4px
+        &__label
+            position: relative
+            display: inline-block
+            cursor: pointer
+            margin-top: -47px
+            input
+                position: absolute
+                z-index: -1
+                opacity: 0
+        &__indicator
+            position: absolute
+            top: 0
+            left: 0
+            width: 46px
+            height: 46px
+            border: 4px solid #a42f4a
+            border-radius: 50%
+            margin-left: -18px
+            &::after
+                display: none
+                content: url(../img/checkmark.png)
+                position: absolute
+                top: -10px
+                left: 6px
+
+        &__label input:checked ~ .form-block__indicator::after
+            display: block
+        &__text
+            color: #848484
+            font-family: 'Open Sans', sans-serif
+            text-transform: uppercase
+            max-width: 310px
+            margin: 0
+            padding-left: 70px
+            margin-left: 60px
