--- a/sass/blocks/index/_do.sass
+++ b/sass/blocks/index/_do.sass
@@ -1,5 +1,5 @@
 .do
-    background: url(../img/fone.jpg) center top / 100% no-repeat
+    background: url(../img/fone.jpg) center / 100% no-repeat
     width: 100%
     min-height: 928px
     &-block
