--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,19 +1,20 @@
-@media (max-width: 1820px)
+@media (max-width: 1760px)
     .need
         &-block
-            right: 50px
+            margin-left: 60px
 @media (max-width: 1690px)  
     .need
         &-block
-            right: 0
-            padding-right: 20px
-            width: 38%  
+            margin-left: 20px 
         &-text
             width: 52%  
     .do
         background: url(../img/fone.jpg) center/cover no-repeat   
 @media (max-width: 1600px)
     .need
+        &-block
+            margin-left: 180px
+            padding-right: 20px
         &-text
             background: url(../img/need.jpg) no-repeat -100px 0  
             &__title
