--- a/sass/blocks/index/_merchant.sass
+++ b/sass/blocks/index/_merchant.sass
@@ -1,5 +1,5 @@
 .merchant
-    padding: 107px 0 170px
+    padding: 98px 0 170px
     &__title
         color: #00873f
         font-family: 'Comfortaa', sans-serif
@@ -8,7 +8,7 @@
         text-align: center
         padding-bottom: 40px
         position: relative
-        margin: 0 0 46px
+        margin: 0 0 40px
         &::before
             content: ''
             position: absolute
@@ -24,7 +24,7 @@
         font-size: 26px
         font-weight: bold
         line-height: 40px
-        margin: 0 auto 66px
+        margin: 0 auto 60px
         text-align: center
         max-width: 1220px
     &-block
@@ -37,9 +37,9 @@
         &__title
             color: #202020
             font-family: 'Open Sans', sans-serif
-            font-size: 24px
-            font-weight: 600
-            line-height: 35px
+            font-size: 22px
+            font-weight: bold
+            line-height: 26px
             margin: 0 0 35px
         &__text
             color: #848484
@@ -47,7 +47,7 @@
             font-size: 20px
             font-weight: bold
             line-height: 35px
-            margin: 0 0 37px
+            margin: 0 0 6px
         &__link
             display: block
             color: #00873f
