--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,7 @@
 @import 'blocks/index/do'
 @import 'blocks/index/layout'
 @import 'blocks/index/payment'
-
+@import 'blocks/index/benefits'
     
 @import 'blocks/index/merchant'
 @import 'footer'
