--- a/sass/blocks/index/_need.sass
+++ b/sass/blocks/index/_need.sass
@@ -1,6 +1,9 @@
 .need
     background-color: $need
     position: relative
+    .container
+        display: flex
+        justify-content: flex-end
     &-text
         width: 51%
         background: url(../img/need.jpg) no-repeat left center
@@ -45,8 +48,9 @@
     &-block
         max-width: 660px
         position: absolute
-        top: 110px
-        right: 180px
+        top: 0
+        margin-top: 108px
+        margin-left: 12px
         &__title
             color: #fcb800
             font-family: 'Comfortaa', sans-serif
