--- a/sass/blocks/index/_payment.sass
+++ b/sass/blocks/index/_payment.sass
@@ -1,3 +1,102 @@
 .payment
     padding: 50px 0 125px
     background-color: #f8f8f8
+    position: relative
+    .container
+        max-width: 1470px
+    &__line
+        &-violet
+            background: url(../img/violet.png) no-repeat
+            width: 91px
+            height: 95px
+            position: absolute
+            left: 0
+            top: 0
+            margin-left: 49px
+            margin-top: 106px
+        &-green
+            background: url(../img/green.png) no-repeat
+            width: 91px
+            height: 95px
+            position: absolute
+            left: 0
+            top: 0
+            margin-left: 305px
+            margin-top: 75px
+        &-blue
+            background: url(../img/blue.png) no-repeat
+            width: 91px
+            height: 95px
+            position: absolute
+            left: 0
+            top: 0
+            margin-left: 60px
+            margin-top: 370px
+.content
+    margin-top: 108px
+    &-block
+        background-color: #ffffff
+        max-width: 460px
+        width: 100%
+        padding: 30px 56px 40px 30px
+        border: 1px solid #f0f0f0
+        margin-bottom: 70px
+        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.18)
+        display: flex
+        align-items: center
+        height: 212px
+        overflow: hidden
+        &:first-child
+            background-color: #f8f8f8
+            box-shadow: none
+            border: none
+            display: block
+            padding: 35px 0 0
+        &s
+            justify-content: space-between
+        svg
+            path
+                fill: #22c66f
+                stroke: #22c66f !important
+        &__description
+            margin-left: 30px
+        &__title
+            color: #202020
+            font-family: 'Open Sans', sans-serif
+            font-weight: 700
+            font-size: 28px
+            font-weight: bold
+        &__text
+            color: #8e8e8e
+            font-family: 'Open Sans', sans-serif
+            font-weight: normal
+    &__link
+        color: $white
+        max-width: 311px
+        width: 100%
+        height: 64px
+        border-radius: 4px
+        background-color: #10964e
+        font-family: 'Montserrat', sans-serif
+        font-size: 24px
+        font-weight: 400
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-left: auto
+        margin-top: -15px
+        margin-right: 10px
+.payments
+    &-undertitle
+        font-family: 'Open Sans', sans-serif;
+        text-transform: uppercase
+        display: block
+        color: #306a31
+        margin-top: 20px
+    &-title
+        font-family: 'Comfortaa', sans-serif;
+        max-width: 310px !important
+        font-size: 50px
+        max-width: 240px
+        margin: 20px 0 0
+        font-weight: bold
