--- a/css/style.css
+++ b/css/style.css
@@ -1333,7 +1333,7 @@ a {
 }
 
 .merchant {
-  padding: 98px 0 170px;
+  padding: 98px 0 160px;
 }
 
 .merchant__title {
@@ -1418,6 +1418,118 @@ a {
           justify-content: space-between;
 }
 
+.footer {
+  background-color: #40523c;
+  padding: 70px 0 80px;
+}
+
+.footer-block__text {
+  margin: 0 0 40px 7px;
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 24px;
+  color: #ffffff;
+  max-width: 315px;
+}
+
+.footer-block__description {
+  margin: 25px 0 40px;
+  color: #b8b9b6;
+  max-width: 720px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  line-height: 38px;
+}
+
+.footer-block__title {
+  margin: 24px 0 38px 7px;
+  font-size: 26px;
+  font-family: 'Open Sans', sans-serif;
+  color: #e9b52b;
+}
+
+.footer-blocks {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 100px;
+}
+
+.footer__text {
+  font-family: 'Open Sans', sans-serif;
+  color: #999a99;
+  font-size: 18px;
+  margin: 0;
+}
+
+.contact__hour {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  color: #b8b9b6;
+  display: block;
+}
+
+.contact-block__phone {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: 34px;
+  color: #b8b9b6;
+}
+
+.contact-block__phone span {
+  color: #e9b52b;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.contact-block__or {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  color: #b8b9b6;
+  margin: 0 30px;
+  display: inline-block;
+}
+
+.contact-block__btn {
+  border-radius: 4px;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  max-width: 300px;
+  height: 65px;
+  background-color: #e9b52b;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.list {
+  margin: 0 0 0 7px;
+  padding: 0;
+  list-style: none;
+}
+
+.list__item {
+  margin-bottom: 17px;
+}
+
+.list__link {
+  display: block;
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+}
+
 @media (max-width: 1760px) {
   .need-block {
     margin-left: 60px;
@@ -1425,6 +1537,9 @@ a {
 }
 
 @media (max-width: 1690px) {
+  .benefits-block__text {
+    max-width: 750px;
+  }
   .need-block {
     margin-left: 20px;
   }
@@ -1492,6 +1607,11 @@ a {
   }
   .layout-block {
     margin-bottom: 30px;
+    max-width: 360px;
+  }
+  .layout-block__title {
+    height: 54px;
+    overflow: hidden;
   }
   .merchant {
     padding: 60px 0;
@@ -1512,6 +1632,58 @@ a {
   }
   .do-btn {
     display: none;
+  }
+  .content-blocks {
+    max-width: 1100px;
+    margin: auto;
+  }
+  .content__link {
+    margin: auto;
+  }
+  .benefits {
+    padding: 110px 0;
+  }
+  .benefits-block__text {
+    max-width: 500px;
+  }
+  .benefits-btn__link-left {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+  .benefits-btn__link-right {
+    margin-bottom: 30px;
+  }
+  .merchant-block {
+    max-width: 350px;
+  }
+  .merchant-block__image {
+    margin-bottom: 30px;
+  }
+  .merchant-block__title {
+    margin: 0 0 20px;
+  }
+  .merchant-block__text {
+    line-height: 28px;
+    font-size: 18px;
+  }
+  .footer-block__description {
+    max-width: 470px;
+  }
+  .contact__hour {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .contact-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-block__btn {
+    margin: auto;
+  }
+  .contact-block__or {
+    margin: 20px auto;
   }
 }
 
@@ -1549,12 +1721,108 @@ a {
   }
 }
 
-@media (max-width: 1120px) {
+@media (max-width: 1200px) {
+  .payment {
+    padding: 40px 0 60px;
+  }
+  .payment__line-violet {
+    margin-left: 30px;
+    margin-top: 50px;
+  }
+  .payment__line-green {
+    margin-left: 230px;
+    margin-top: 105px;
+  }
+  .payment__line-blue {
+    margin-left: 130px;
+    margin-top: 70px;
+  }
+  .benefits::before {
+    display: none;
+  }
+  .benefits-block__text {
+    max-width: none;
+  }
+  .benefits-blocks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .benefits-btn {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .benefits-btn__link-left {
+    margin-right: 30px;
+    margin-bottom: 45px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .merchant__subtitle {
+    font-size: 20px;
+    max-width: 900px;
+    line-height: 30px;
+  }
+  .merchant-block {
+    max-width: none;
+  }
+  .merchant-blocks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container {
+    max-width: 991px;
+  }
+  .logo {
+    margin-top: 0;
+  }
   .nav {
     display: none;
   }
   .header-side {
     max-width: 360px;
+  }
+  .layout::before {
+    display: none;
+  }
+  .footer-block:last-child {
+    margin: 25px auto 0;
+  }
+  .footer-blocks {
+    max-width: 800px;
+    margin: auto;
+  }
+  .footer__text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .payment__line-violet, .payment__line-blue, .payment__line-green {
+    display: none;
+  }
+  .content {
+    margin-top: 0;
+  }
+  .content-blocks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
