--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -22,3 +22,49 @@ a
     font: 
         family: 'Comfortaa', sans-serif
         weight: 700
+.burger
+    display: none
+    width: 44px
+    height: 44px
+    cursor: pointer
+    position: absolute
+    top: -20px
+    right: 10px
+    z-index: 20
+    &__top
+        width: 40px
+        height: 4px
+        background-color: $white
+        position: absolute
+        top: 8px
+        right: 10px
+        border-radius: 4px
+        transition: .3s
+    &__center
+        width: 40px
+        height: 4px
+        background-color: $white
+        position: absolute
+        top: 16px
+        right: 10px
+        border-radius: 4px
+        transition: .3s
+    &__bottom
+        width: 40px
+        height: 4px
+        background-color: $white
+        position: absolute
+        top: 24px
+        right: 10px
+        border-radius: 4px
+        transition: .3s
+.burger
+    &__open 
+        .burger__top
+            transform: rotate(45deg)
+            top: 10px
+        .burger__center
+            opacity: 0
+        .burger__bottom
+            transform: rotate(-45deg)
+            top: 10px
